<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PervasiveMobile</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="ui_label_serverURL">Server URL</string>
    <string name="ui_et_serverURL_default">127.0.0.1:8080</string>
    <string name="ui_label_requestMethod">JSON request method:</string>
    <string name="ui_et_requestMethod_default">getTime</string>
    <string name="ui_label_response_default">Server current time</string>
    <string name="ui_btn_sendRequest">Send Request</string>

</resources>
